--- a/package.json
+++ b/package.json
@@ -3,22 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "npm run serve ",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.4",
+    "better-scroll": "^2.4.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "echarts": "^5.3.0",
+    "js-export-excel": "^1.1.4",
+    "nprogress": "^0.2.0",
+    "v-viewer": "^1.5.1",
+    "video.js": "^8.6.1",
+    "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.5",
+    "vue-router": "^3.6.5",
+    "vue-video-player": "^5.0.2",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "esri-loader": "^3.7.0",
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "stylus": "^0.57.0",
+    "stylus-loader": "^6.2.0",
+    "vue-cli-plugin-axios": "~0.0.4",
+    "vue-cli-plugin-vuetify": "~2.1.0",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
