--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "axios": "^0.21.4",
     "better-scroll": "^2.4.2",
+    "cesium": "^1.127.0",
     "core-js": "^3.6.5",
     "echarts": "^5.3.0",
     "js-export-excel": "^1.1.4",
@@ -19,6 +20,7 @@
     "v-viewer": "^3.0.11",
     "video.js": "^7.20.3",
     "vue": "^3.3.4",
+    "vue-cesium": "^3.2.9",
     "vue-lazyload": "^3.0.0",
     "vue-router": "^4.2.5",
     "vue-video-player": "^6.0.0",
@@ -33,9 +35,11 @@
     "@vue/compiler-sfc": "^3.3.4",
     "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
+    "copy-webpack-plugin": "^13.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^9.17.0",
     "esri-loader": "^3.7.0",
+    "file-loader": "^6.2.0",
     "gogocode": "^1.0.55",
     "gogocode-plugin-vue": "^1.0.29",
     "sass": "^1.32.0",
